# poorguy-mem

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: nightly-ci.yml  pr-ci.yml
assets/: custom_store_adapter_example.cpp  poorguy-mem.mdc
docs/: stage-review.md  test-matrix.md
docs/api/: memory-mcp-contract.en.md  memory-mcp-contract.zh.md
docs/design/: memory-mcp-query-pipeline.en.md  memory-mcp-query-pipeline.zh.md  memory-mcp-storage-model.en.md  memory-mcp-storage-model.zh.md
docs/testing/: memory-mcp-testplan.en.md  memory-mcp-testplan.zh.md
docs/usage/: memory-mcp-quickstart.en.md  memory-mcp-quickstart.zh.md
include/eloqstore_txservice_compat/: meter.h  metrics.h
include/pgmem/: types.h
include/pgmem/config/: defaults.h
include/pgmem/core/: analyzer.h  embedding_provider.h  memory_engine.h  metrics.h  retriever.h  summary.h  sync.h  vector_index.h
include/pgmem/install/: workspace_config.h
include/pgmem/mcp/: mcp_dispatcher.h
include/pgmem/net/: brpc_runtime.h  http_client.h  http_common.h  http_server.h
include/pgmem/store/: io_uring_probe.h  store_adapter.h
include/pgmem/util/: json.h  text.h  time.h
proto/: http_router.proto
scripts/: build.sh  clean.sh  deploy_mcp.sh  format.sh  install.sh  install_deps.sh  install_deps_ubuntu2404.sh  run_local.sh  smoke_mcp.sh  start.sh  verify.sh  verify_clients.sh
src/apps/: pgmem_install_main.cpp  pgmem_syncd_main.cpp  pgmemd_main.cpp
src/core/: default_analyzer.cpp  hash_embedding_provider.cpp  lsh_vector_index.cpp  memory_engine.cpp  metrics.cpp  retriever.cpp  summary.cpp  sync.cpp
src/install/: workspace_config.cpp
src/mcp/: mcp_dispatcher.cpp
src/net/: brpc_runtime.cpp  http_client.cpp  http_common.cpp  http_server.cpp
src/store/: eloqstore_adapter.cpp  in_memory_store_adapter.cpp  io_uring_probe.cpp  store_factory.cpp
src/util/: json.cpp  text.cpp  time.cpp
systemd/: pgmemd.service
tests/: test_brpc_runtime.cpp  test_framework.h  test_mcp_dispatcher.cpp  test_memory_engine.cpp  test_retriever.cpp  test_store_factory.cpp  test_sync_lww.cpp  test_text.cpp  test_workspace_config.cpp  unit_main.cpp
